--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
                   <a href="https://github.com/amrme" target="_blank">GitHub</a>
                 </li>
                 <li>
+                  <a href="https://gist.github.com/amrme" target="_blank">Gist</a>
+                </li>
+                <li>
                    <a href="https://www.facebook.com/amrsekilly">Facebook</a>
                 </li>
             </ul>
