--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Amr Mohamed Elsayed Elsekilly's portfolio, personal website, blog, contact, web developer, front end web developer, full stack web developer">
     <meta name="author" content="Amr M Elsekilly (http://amrsekilly.com)">
     <title>Amr M ElSekilly's Portfolio/Personal Website</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
 
     <!-- Bootstrap -->
     <link href="css/main.min.css" rel="stylesheet">
@@ -82,7 +83,11 @@
                             </div>
                           </div>
                         </div> <!-- /portfolio -->
-
+                        <!-- contact -->
+                        <!-- appears only when navbar collapses -->
+                        <div class="visible-xs">
+                          Hello there!
+                        </div>
                     </div>
                 </div>
             </div>
