added social media to bottom

--- a/index.html
+++ b/index.html
@@ -86,7 +86,23 @@
                         <!-- contact -->
                         <!-- appears only when navbar collapses -->
                         <div class="visible-xs">
-                          Hello there!
+                          <ul class="phone-contact text-center">
+                            <li>
+                                <a href="https://twitter.com/amrsekilly" target="_blank">Twitter</a>
+                            </li>
+                            <li>
+                                <a href="https://eg.linkedin.com/in/amrsekilly" target="_blank">LinkedIn</a>
+                            </li>
+                            <li>
+                              <a href="https://github.com/amrme" target="_blank">GitHub</a>
+                            </li>
+                            <li>
+                              <a href="https://gist.github.com/amrme" target="_blank">Gist</a>
+                            </li>
+                            <li>
+                               <a href="https://www.facebook.com/amrsekilly">Facebook</a>
+                            </li>
+                          </ul>
                         </div>
                     </div>
                 </div>
