removed all the old code

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="Amr Mohamed Elsayed Elsekilly's portfolio, personal website, blog, contact, web developer, front end web developer, full stack web developer">
     <meta name="author" content="Amr M Elsekilly (http://amrsekilly.com)">
-    <title>Amr M ElSekilly's Portfolio/Personal Website</title>
+    <title>Amr Elsekilly's Portfolio</title>
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-
     <!-- Bootstrap -->
-    <link href="css/main.min.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -22,98 +22,9 @@
   </head>
   <body>
 
-    <div id="wrapper">
 
-        <!-- Sidebar -->
-        <div id="sidebar-wrapper">
-
-            <ul class="sidebar-nav text-center">
-              <li >
-                <img src="img/meFiltered.jpg" alt="Amr M Elsekilly" title="Amr M Elsekilly" class="img-responsive img-rounded" />
-              </li>
-              <li class="job-title">Jr. front end web developer</li>
-                <li>
-                    <a href="https://twitter.com/amrsekilly" target="_blank">Twitter</a>
-                </li>
-                <li>
-                    <a href="https://eg.linkedin.com/in/amrsekilly" target="_blank">LinkedIn</a>
-                </li>
-                <li>
-                  <a href="https://github.com/amrme" target="_blank">GitHub</a>
-                </li>
-                <li>
-                  <a href="https://gist.github.com/amrme" target="_blank">Gist</a>
-                </li>
-                <li>
-                   <a href="https://www.facebook.com/amrsekilly">Facebook</a>
-                </li>
-            </ul>
-        </div>
-        <!-- /#sidebar-wrapper -->
-
-        <!-- Page Content -->
-        <div id="page-content-wrapper">
-            <div class="container-fluid">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <div class="alert alert-warning">
-                          <strong>I'm still creating the portfolio, this is just a placeholder!</strong>
-                          <i>The sidebar was written by <a href="http://startbootstrap.com/template-overviews/simple-sidebar/" target="_blank">David Miller</a> under <a href="https://github.com/IronSummitMedia/startbootstrap/blob/gh-pages/LICENSE" target="_blank">Apache 2.0</a> For <a href="http://startbootstrap.com/" target="_blank">Start Bootstrap</a>.</i>
-                        </div>
-                        <!-- portfolio -->
-                        <div class="row">
-                          <h2 class="text-center">My Portfolio</h2>
-                          <p class="text-center">Professional work that I created for real organizations and companies.</p>
-                          <div class="col-xs-12 text-center">
-                            <h3><a href="http://aquaphoton.net">AquaPhoton.net</a> Responsive Website</h3>
-                            <iframe src="http://aquaphoton.net" width="70%" height="800px;"></iframe>
-                            <div>
-                              <p class="well" style="width:70%; margin-left:auto; margin-right:auto; margin-top:-10px;">
-                                I used Handlebars.js to create the templates, to separate the content in a JSON file from the HTML, so that it's easy for anyone to edit.
-                                <br>
-                                <br>
-                                I used LESS to write my CSS, it helped my write an organized and clear styles. And I used Grunt, and bower for managing the needed libraries and doing the redundant tasks.\n\nI also used Bootstrap for responsiveness, and I used Javascript and some JS libraries such as jQuery for DOM manipulation and wow.js for creating landing elements when content is revealed by scrolling.
-                                <br>
-                                <br>
-                                Also I used animate.css to add some animations to the DOM elements.
-                                <br>
-                                <br>
-                                I created an image viewer from scratch using jQuery, and I implemented a random generator, for generating a new array for the team members on each refresh, so that each member appears in a new position on the screen on each refresh.
-                              </p>
-                            </div>
-                          </div>
-                        </div> <!-- /portfolio -->
-                        <!-- contact -->
-                        <!-- appears only when navbar collapses -->
-                        <div class="visible-xs">
-                          <ul class="phone-contact text-center">
-                            <li>
-                                <a href="https://twitter.com/amrsekilly" target="_blank">Twitter</a>
-                            </li>
-                            <li>
-                                <a href="https://eg.linkedin.com/in/amrsekilly" target="_blank">LinkedIn</a>
-                            </li>
-                            <li>
-                              <a href="https://github.com/amrme" target="_blank">GitHub</a>
-                            </li>
-                            <li>
-                              <a href="https://gist.github.com/amrme" target="_blank">Gist</a>
-                            </li>
-                            <li>
-                               <a href="https://www.facebook.com/amrsekilly">Facebook</a>
-                            </li>
-                          </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- /#page-content-wrapper -->
-
-    </div>
-    <!-- /#wrapper -->
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   </body>
 </html>
