lets encrypt setup

--- a/letsencrypt-setup.html
+++ b/letsencrypt-setup.html
@@ -1,6 +1,6 @@
 ---
 layout: null
-permalink: /.well-known/acme-challenge/ntknJQndYu8Gt2JGP5ITqDOtGOiQm9hySXzAMIK2y60.html
+permalink: /.well-known/acme-challenge/lyDVNR3OwisSM0Zo3IgLOiFRGvuNK-G7HT52H0ZPfyk
 ---
 
-ntknJQndYu8Gt2JGP5ITqDOtGOiQm9hySXzAMIK2y60.QPXJkhQcsgTeqrPTxxHQilvouCb8WOCvsVb44HKoizk
+lyDVNR3OwisSM0Zo3IgLOiFRGvuNK-G7HT52H0ZPfyk.QPXJkhQcsgTeqrPTxxHQilvouCb8WOCvsVb44HKoizk
