lets encrypt setup

--- a/letsencrypt-setup.html
+++ b/letsencrypt-setup.html
@@ -1,6 +1,6 @@
 ---
 layout: null
-permalink: /.well-known/acme-challenge/lyDVNR3OwisSM0Zo3IgLOiFRGvuNK-G7HT52H0ZPfyk
+permalink: /.well-known/acme-challenge/Wt-pWvhtnxZGf3BF0doGJwZAkiEu6pzzMY8mAKe0LGw.html
 ---
 
-lyDVNR3OwisSM0Zo3IgLOiFRGvuNK-G7HT52H0ZPfyk.QPXJkhQcsgTeqrPTxxHQilvouCb8WOCvsVb44HKoizk
+Wt-pWvhtnxZGf3BF0doGJwZAkiEu6pzzMY8mAKe0LGw.QPXJkhQcsgTeqrPTxxHQilvouCb8WOCvsVb44HKoizk
