modified the url button for companies

--- a/work.html
+++ b/work.html
@@ -42,7 +42,7 @@ permalink: /work/
         </div>
       </div>
       <div class="project-links">
-        <a class="btn btn-success btn-md" href="{{project.url}}">Official Website</a>
+        <a class="btn btn-info btn-md" target="_blank" href="{{project.url}}">Official Website</a>
       </div>
     </div>
   </div>
